Documentation update for guess id
